<resources>
    <string name="app_name">ChatApp</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="show">Show</string>
    <string name="log_out">Log out</string>
    <string name="string_log_out">\@string/log_out</string>
    <string name="type_a_message">Type a message</string>
</resources>